# lab_docker

./: .README.md.swp  .env  .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  Dockerfile  LICENSE  LICENSE.rtf  README.md  docker-compose.yml
.github/workflows/: ci.yml
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  cmake_install.cmake
_build/Testing/Temporary/: CTestCostData.txt
_build/formatter_ex/: Makefile  cmake_install.cmake
_build/formatter_lib/: Makefile  cmake_install.cmake
_build/hello_world/: Makefile  cmake_install.cmake  hello_world
_build/solver/: Makefile  cmake_install.cmake  solver
_build/solver_lib/: Makefile  cmake_install.cmake
banking/: CMakeLists.txt
banking/tests/: test_account.cpp  test_transaction.cpp
banking/tests/mocks/: MockAccount.hpp  MockTransaction.hpp
formatter_ex/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
include/: print.hpp
lab_docker2/: README.md  docker-compose.yml
lab_docker2/app/: Dockerfile  README.md  app.py  models.py
lab_docker2/app/templates/: index.html
lab_docker2/db/: init.sql
solver/: CMakeLists.txt
solver_lib/: CMakeLists.txt
